feat: day03, 快排代码, 二叉树, 堆, 非比较排序

--- a/Lecture02/code.ipynb
+++ b/Lecture02/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,6 +320,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quickSort01(arr, L, R):\n",
+    "    if (L >= R):\n",
+    "        return\n",
+    "    l = len(arr)\n",
+    "    num = arr[R]\n",
+    "    less = quickSort01_partition(arr, num, L, R-1) # less 只可能在 [L-1, R-1] 范围内\n",
+    "    swap(arr, less+1, R)\n",
+    "    quickSort01(arr, L, less)\n",
+    "    quickSort01(arr, less+1, R)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def quickSort01_partition(arr, num, L, R):\n",
+    "    \"\"\" \n",
+    "    二项划分, 其中 l 是 less, i 是当前数下标\n",
+    "        当前数 <= num, l++, 交换(l, i), i++\n",
+    "        当前数 > num, i++\n",
+    "    \"\"\"\n",
+    "    less = L - 1 # <= 区域的边界\n",
+    "    partition_len = R - L + 1\n",
+    "    for i in range(partition_len):\n",
+    "        if arr[L+i] <= num:\n",
+    "            less += 1\n",
+    "            swap(arr, less, L+i)\n",
+    "    return less\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -328,11 +361,98 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quickSort02(arr, L, R):\n",
+    "    if (L >= R):\n",
+    "        return\n",
+    "    l = len(arr)\n",
+    "    num = arr[R]\n",
+    "    less, more = quickSort02_partition(arr, num, L, R-1)\n",
+    "    swap(arr, more, R)\n",
+    "    quickSort02(arr, L, less)\n",
+    "    quickSort02(arr, more+1, R)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def quickSort02_partition(arr, num, L, R):\n",
+    "    \"\"\" \n",
+    "    三项划分, 其中 i 是当前数下标, less 是 \"< 区域\" 的最右侧值下标, more 是 \"> 区域\" 的最左侧值下标\n",
+    "        当前数 < num, less++, 交换(less, i), i++\n",
+    "        当前数 = num, i++\n",
+    "        当前数 > num, more--, 交换(more, i), 此时 i 不变\n",
+    "        less 和 more 会不断夹击 i, 而 i 只会变大\n",
+    "        当 i 碰上 more 时, 就代表结束了\n",
+    "    \"\"\"\n",
+    "    less = L - 1 # <= 区域的边界\n",
+    "    more = R + 1\n",
+    "    i = L\n",
+    "    while True:\n",
+    "        if arr[i] < num:\n",
+    "            less += 1\n",
+    "            swap(arr, less, i)\n",
+    "            i += 1\n",
+    "        elif arr[i] == num:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            more -= 1\n",
+    "            swap(arr, more, i)\n",
+    "        \n",
+    "        if i == more:\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "    return less, more\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 快速排序 3.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quickSort03(arr, L, R):\n",
+    "    if (L < R):\n",
+    "        # 等概率随机取一个数作为划分值\n",
+    "        num_index = random.randint(L, R)\n",
+    "        # 将这个数和最后位置上的数进行交换\n",
+    "        swap(arr, num_index, R)\n",
+    "        # less ∈ [L-1, R-1], more ∈ [L, R]\n",
+    "        less, more = quickSort03_partition(arr, L, R)\n",
+    "        quickSort03(arr, L, less) # 继续对 \"< 区\" 排序\n",
+    "        quickSort03(arr, more, R) # 继续对 \"> 区\" 排序\n",
+    "\n",
+    "# 没有给出 num 参数, 表示 num 为数组最后一个数\n",
+    "def quickSort03_partition(arr, L, R):\n",
+    "    less = L - 1 # \"< 区\" 右边界。 less 所在位置属于 \"< 区\"。 less 初始值(-1)表示所在区域为空\n",
+    "    more = R # \"> 区\" 左边界, more 所在位置属于 \"> 区\", more 初始值表示所在区域为空\n",
+    "    num = arr[R]\n",
+    "    i = L\n",
+    "    while i < more:\n",
+    "        if arr[i] < num:\n",
+    "            less += 1\n",
+    "            swap(arr, less, i)\n",
+    "            i += 1\n",
+    "        elif arr[i] > num:\n",
+    "            more -= 1\n",
+    "            swap(arr, more, i)\n",
+    "        else:\n",
+    "            i += 1\n",
+    "\n",
+    "    # 将划分值放到正确的位置上, 即 \"> 区\" 的左边界\n",
+    "    swap(arr, more, R)\n",
+    "    return less, more"
    ]
   },
   {
@@ -345,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +507,7 @@
     }
    ],
    "source": [
-    "testTime = 5000\n",
+    "testTime = 500_000\n",
     "maxSize = 100\n",
     "maxValue = 100\n",
     "succeed = True\n",
@@ -406,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -450,8 +570,8 @@
    ],
    "source": [
     "testTime = 5000\n",
-    "maxSize = 10\n",
-    "maxValue = 10\n",
+    "maxSize = 100\n",
+    "maxValue = 100\n",
     "succeed = True\n",
     "\n",
     "for i in range(0, testTime):\n",
@@ -470,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -483,8 +603,8 @@
    ],
    "source": [
     "testTime = 5000\n",
-    "maxSize = 10\n",
-    "maxValue = 10\n",
+    "maxSize = 100\n",
+    "maxValue = 100\n",
     "succeed = True\n",
     "\n",
     "for i in range(0, testTime):\n",
@@ -499,6 +619,104 @@
     "        break\n",
     "\n",
     "print('三项划分:', '✔️' if succeed else '❌')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "快速排序 1.0 版本: ✔️\n"
+     ]
+    }
+   ],
+   "source": [
+    "testTime = 500_000\n",
+    "maxSize = 100\n",
+    "maxValue = 100\n",
+    "succeed = True\n",
+    "\n",
+    "for i in range(0, testTime):\n",
+    "    arr1 = generateRandomArray(maxSize, maxValue)\n",
+    "    arr2 = copyArray(arr1)\n",
+    "\n",
+    "    test_res = quickSort01(arr1, 0, len(arr1)-1)\n",
+    "    real_res = arr2.sort()\n",
+    "    if isEqual(arr1, arr2) == False:\n",
+    "        succeed = False\n",
+    "        break\n",
+    "\n",
+    "print('快速排序 1.0 版本:', '✔️' if succeed else '❌')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "快速排序 2.0 版本: ✔️\n"
+     ]
+    }
+   ],
+   "source": [
+    "testTime = 5_000\n",
+    "maxSize = 10000\n",
+    "maxValue = 100\n",
+    "succeed = True\n",
+    "\n",
+    "for i in range(0, testTime):\n",
+    "    arr1 = generateRandomArray(maxSize, maxValue)\n",
+    "    arr2 = copyArray(arr1)\n",
+    "\n",
+    "    test_res = quickSort02(arr1, 0, len(arr1)-1)\n",
+    "    \n",
+    "    real_res = arr2.sort()\n",
+    "    if isEqual(arr1, arr2) == False:\n",
+    "        succeed = False\n",
+    "        break\n",
+    "\n",
+    "print('快速排序 2.0 版本:', '✔️' if succeed else '❌')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "快速排序 3.0 版本: ✔️\n"
+     ]
+    }
+   ],
+   "source": [
+    "testTime = 5_000\n",
+    "maxSize = 10000\n",
+    "maxValue = 100\n",
+    "succeed = True\n",
+    "\n",
+    "for i in range(0, testTime):\n",
+    "    arr1 = generateRandomArray(maxSize, maxValue)\n",
+    "    arr2 = copyArray(arr1)\n",
+    "\n",
+    "    test_res = quickSort03(arr1, 0, len(arr1)-1)\n",
+    "\n",
+    "    real_res = arr2.sort()\n",
+    "    if isEqual(arr1, arr2) == False:\n",
+    "        succeed = False\n",
+    "        break\n",
+    "\n",
+    "print('快速排序 3.0 版本:', '✔️' if succeed else '❌')"
    ]
   }
  ],
