update: 完善一点笔记, 删掉多余的 copy 文件

--- a/Lecture04/code.ipynb
+++ b/Lecture04/code.ipynb
@@ -884,7 +884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 验证"
+    "## 验证"
    ]
   },
   {
@@ -922,7 +922,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 实现"
+    "## 实现"
    ]
   },
   {
@@ -951,17 +951,14 @@
     "def copy_random_node_linked_list2(head):\n",
     "    if head is None:\n",
     "        return None\n",
-    "    # 如果不利用额外空间, 就得思考要把拷贝出来的节点放在哪里, 还能够很方便的找到\n",
-    "    # 答案就是放在对应节点的后面!\n",
-    "    \n",
-    "    # 1. 创建克隆节点并将它们添加到源节点后\n",
+    "    # 1. 创建克隆节点并将它们插入到源节点后\n",
     "    p = head\n",
     "    while p is not None:\n",
     "        p_copy = Node(p.data)\n",
     "        p_copy.next = p.next\n",
     "        p.next = p_copy\n",
     "        p = p_copy.next\n",
-    "    # 2. 为克隆节点的 rand 赋值\n",
+    "    # 2. 找到克隆节点的 rand 所对应的克隆 rand 节点\n",
     "    p = head\n",
     "    while p is not None:\n",
     "        p_copy = p.next\n",
@@ -969,7 +966,7 @@
     "        if p.rand is not None:\n",
     "            p_copy.rand = p.rand.next\n",
     "        p = pn\n",
-    "    # 3. 将克隆节点从中抽离出来\n",
+    "    # 3. 将克隆节点抽离出来\n",
     "    p = head\n",
     "    copy_head = p.next\n",
     "    while p is not None:\n",
@@ -986,7 +983,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 测试"
+    "## 测试"
    ]
   },
   {
