feat: day05 二叉树最大宽度基本 ok;  环链表相交, 二叉树非递归遍历 没弄完

--- a/Lecture04/code.ipynb
+++ b/Lecture04/code.ipynb
@@ -1018,6 +1018,14 @@
     "        break\n",
     "print(f'({t()-st:5.2f}s)复制含有随机指针节点的链表, 方法1, 2', '✔️' if succeed else '❌')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST 判断(有环/无环)链表相交"
+   ]
   }
  ],
  "metadata": {
