update: 部分成环链表代码

--- a/Lecture04/code.ipynb
+++ b/Lecture04/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 2.81s)反转单链表: ✔️\n",
-      "( 3.51s)反转双链表: ✔️\n"
+      "( 2.84s)反转单链表: ✔️\n",
+      "( 3.53s)反转双链表: ✔️\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 4.25s)打印链表公共部分: ✔️\n"
+      "( 4.35s)打印链表公共部分: ✔️\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,14 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 4.74s)判断是否回文-方法1,2,3 ✔️\n"
+      "( 4.86s)判断是否回文-方法1,2,3 ✔️\n"
      ]
     }
    ],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,14 +672,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 4.23s)validate_partition: ✔️\n"
+      "( 4.36s)validate_partition: ✔️\n"
      ]
     }
    ],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,15 +801,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 6.02s)链表 partition 划分, 方法1 ✔️\n",
-      "( 4.22s)链表 partition 划分, 方法2 ✔️\n"
+      "( 6.16s)链表 partition 划分, 方法1 ✔️\n",
+      "( 4.21s)链表 partition 划分, 方法2 ✔️\n"
      ]
     }
    ],
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,14 +988,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(14.37s)复制含有随机指针节点的链表, 方法1, 2 ✔️\n"
+      "(14.47s)复制含有随机指针节点的链表, 方法1, 2 ✔️\n"
      ]
     }
    ],
@@ -1024,7 +1024,364 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST 判断(有环/无环)链表相交"
+    "# TEST 获取环链表的入环节点"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 工具"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint as r\n",
+    "def v(max_value):\n",
+    "    return r(-max_value, max_value)\n",
+    "\n",
+    "# 返回链表, 环点\n",
+    "def generate_cycle_linked_list(max_size=30, max_value=60):\n",
+    "    if r(0,9) == 1: # 不成环\n",
+    "        return generate_random_linked_list(max_size, max_value), None\n",
+    "    # 成环\n",
+    "    # 先正常生成一串链表\n",
+    "    head = generate_random_linked_list(max_size, max_value)\n",
+    "    if head is None: \n",
+    "        return None, None\n",
+    "    \n",
+    "    # 获取链表的长度\n",
+    "    l, tail = 1, head\n",
+    "    while tail.next is not None:\n",
+    "        l += 1\n",
+    "        tail = tail.next\n",
+    "    # 随机指定某个节点为环点\n",
+    "    random_cycle = r(0, l-1) # 注意这里是 l -1 , 因为是从 0 开始的\n",
+    "    random_cycle_node = head\n",
+    "    while random_cycle != 0:\n",
+    "        random_cycle -= 1\n",
+    "        random_cycle_node = random_cycle_node.next\n",
+    "    # 尾巴指向环点\n",
+    "    tail.next = random_cycle_node\n",
+    "    return head, random_cycle_node\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 实现"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_cycle_linked_list1(head):\n",
+    "    node_set = set()\n",
+    "    p = head\n",
+    "    while p is not None:\n",
+    "        if p in node_set:\n",
+    "            return p\n",
+    "        node_set.add(p)\n",
+    "        p = p.next\n",
+    "    return None\n",
+    "\n",
+    "def is_cycle_linked_list2(head):\n",
+    "    if head is None or head.next is None or head.next.next is None:\n",
+    "        return None # 不成环\n",
+    "    slow = head.next\n",
+    "    quick = head.next.next\n",
+    "    while quick is not slow: # 如果成环, 快慢指针一定相遇\n",
+    "        if quick.next is None or quick.next.next is None: # 不成环\n",
+    "            return None\n",
+    "        quick = quick.next.next\n",
+    "        slow = slow.next\n",
+    "    # 快慢指针相遇后, 快指针从头节点开始, 每次一步\n",
+    "    quick = head\n",
+    "    while quick is not slow:\n",
+    "        quick = quick.next\n",
+    "        slow = slow.next\n",
+    "    return quick\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 测试"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( 2.56s)判断有无环, 方法1 ✔️\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_time, max_size, max_value, succeed = 10_000, 500, 200, True\n",
+    "\n",
+    "st = t()\n",
+    "for _ in range(test_time):\n",
+    "    h1, random_cycle_node = generate_cycle_linked_list(max_size, max_value)\n",
+    "    test_cycle_node1 = is_cycle_linked_list1(h1)\n",
+    "    test_cycle_node2 = is_cycle_linked_list2(h1)\n",
+    "\n",
+    "    if test_cycle_node1 is not test_cycle_node2 or test_cycle_node1 is not random_cycle_node:\n",
+    "        succeed = False\n",
+    "        break\n",
+    "print(f'({t()-st:5.2f}s)判断有无环, 方法1,2', '✔️' if succeed else '❌')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 判断(有环/无环)链表相交"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 工具"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_len(head):\n",
+    "    l = 0\n",
+    "    while head is not None:\n",
+    "        l += 1\n",
+    "        head = head.next\n",
+    "    return l\n",
+    "\n",
+    "def must_cycle_linked_list(max_size=30, max_value=60):\n",
+    "    # 成环\n",
+    "    # 先正常生成一串链表\n",
+    "    head = generate_random_linked_list(max_size, max_value)\n",
+    "    if head is None: \n",
+    "        return None, None\n",
+    "    \n",
+    "    # 获取链表的长度\n",
+    "    l, tail = 1, head\n",
+    "    while tail.next is not None:\n",
+    "        l += 1\n",
+    "        tail = tail.next\n",
+    "    # 随机指定某个节点为环点\n",
+    "    random_cycle = r(0, l-1) # 注意是 l-1, 因为是从 0 开始的\n",
+    "    random_cycle_node = head\n",
+    "    while random_cycle != 0:\n",
+    "        random_cycle -= 1\n",
+    "        random_cycle_node = random_cycle_node.next\n",
+    "    # 尾巴指向环点\n",
+    "    tail.next = random_cycle_node\n",
+    "    return head, random_cycle_node\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def intersect_no_cycle(max_size, max_value):\n",
+    "    # 先生成一条链表\n",
+    "    h1 = generate_random_linked_list(max_size, max_value)\n",
+    "    if h1 is None:\n",
+    "        return None, None, None\n",
+    "    h1_len, p = get_len(h1), h1\n",
+    "    h2_size = rand_ = r(0, h1_len)\n",
+    "    while rand_ != 0:\n",
+    "        p = p.next\n",
+    "        rand_ -= 1\n",
+    "    cycle_node = p\n",
+    "    p = h2 = generate_random_linked_list(h2_size, max_value)\n",
+    "    if p is None:\n",
+    "        return h1, cycle_node, cycle_node\n",
+    "    while p.next is not None:\n",
+    "        p = p.next\n",
+    "    p.next = cycle_node\n",
+    "    return h1, h2, cycle_node\n",
+    "\n",
+    "def get_cycle_len(head, cycle=None):\n",
+    "    if is_cycle_linked_list2(head) is None:\n",
+    "        print(head, cycle)\n",
+    "        raise ValueError(\"不是成环链表\")\n",
+    "\n",
+    "    if head is None:\n",
+    "        return 0\n",
+    "    if cycle is None:\n",
+    "        cycle = is_cycle_linked_list2(head)\n",
+    "    l = 0\n",
+    "    while head is not cycle:\n",
+    "        l += 1\n",
+    "        head = head.next\n",
+    "    l += 1\n",
+    "    head = head.next\n",
+    "    while head is not cycle:\n",
+    "        l += 1\n",
+    "        head = head.next\n",
+    "    return l\n",
+    "\n",
+    "\n",
+    "def intersect_cycle(max_size, max_value):\n",
+    "    h1, cycle = must_cycle_linked_list(max_size, max_value)\n",
+    "    h1_len = get_cycle_len(h1, cycle)\n",
+    "    intersect_l = r(0, h1_len-1)\n",
+    "    intersect = h1\n",
+    "    while intersect_l != 0:\n",
+    "        intersect_l -= 1\n",
+    "        intersect = intersect.next\n",
+    "    # 选定了相交点, 可能是在成环前, 也可能是在成环后。\n",
+    "    \n",
+    "    p = h2 = generate_random_linked_list(r(0, max_size), max_value)\n",
+    "    if p is None:\n",
+    "        return h1, intersect, intersect\n",
+    "    while p.next is not None:\n",
+    "        p = p.next\n",
+    "    p.next = intersect\n",
+    "    return h1, h2, intersect\n",
+    "\n",
+    "\n",
+    "\n",
+    "def generate_intersect_linked_list(max_size, max_value):\n",
+    "    if r(0, 2) == 1:\n",
+    "        # 生成一条成环, 一条可能不成环\n",
+    "        h1 = generate_random_linked_list(max_size, max_value)\n",
+    "        h2, _ = generate_cycle_linked_list(max_size, max_value)\n",
+    "        return h1, h2, None\n",
+    "    elif r(0, 2) == 1:\n",
+    "        # 生成两条不成环相交链表\n",
+    "        return intersect_no_cycle(max_size, max_value)\n",
+    "    # else:\n",
+    "    #     # 生成两条成环相交链表\n",
+    "    #     return intersect_cycle(max_size, max_value)\n",
+    "\n",
+    "    return None, None, None\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 实现"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_intersect_linked_list(h1, h2):\n",
+    "    if h1 is None or h2 is None:\n",
+    "        return None\n",
+    "    cycle1 = is_cycle_linked_list2(h1)\n",
+    "    cycle2 = is_cycle_linked_list2(h2)\n",
+    "    if cycle1 is None and cycle2 is None: # 都不成环\n",
+    "        return no_cycle_intersect(h1, h2)\n",
+    "    if cycle1 is not None and cycle2 is not None: # 都成环\n",
+    "        return cycle_intersect(h1, cycle1, h2, cycle2)\n",
+    "    # 一条成环一条不成环, 一定不相交\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def no_cycle_intersect(h1, h2, end=None):\n",
+    "    if h1 is None or h2 is None:\n",
+    "        return None\n",
+    "    # 因为只需要长度差值, 不需要具体长度, 所以可以直接使用一个变量解决问题\n",
+    "    l_diff = 0\n",
+    "    p_long, p_short = h1, h2\n",
+    "    while p_long is not end and p_long.next is not end:\n",
+    "        l_diff += 1\n",
+    "        p_long = p_long.next\n",
+    "    while p_short is not end and p_short.next is not end:\n",
+    "        l_diff -= 1\n",
+    "        p_short = p_short.next\n",
+    "    if p_long is not p_short: # 不相交\n",
+    "        return None\n",
+    "\n",
+    "    p_long, p_short = h1, h2\n",
+    "    if l_diff < 0:\n",
+    "        # h1 比 h2 短, 说明 赋值反了\n",
+    "        p_long, p_short = h2, h1\n",
+    "    # 让长的链表先走 l_diff 个距离。 \n",
+    "    for _ in range(abs(l_diff)):\n",
+    "        p_long = p_long.next\n",
+    "    # 然后两个链表一起移动, 相遇时的点就是交点\n",
+    "    while p_long is not p_short:\n",
+    "        p_long = p_long.next\n",
+    "        p_short = p_short.next\n",
+    "    return p_long\n",
+    "    \n",
+    "    \n",
+    "def cycle_intersect(h1, cycle1, h2, cycle2):\n",
+    "    if cycle1 is cycle2: # 成环点相同\n",
+    "        # 像判断不成环链表那样判断即可\n",
+    "        return no_cycle_intersect(h1, h2, cycle1)\n",
+    "    \n",
+    "    # 成环点不同, 则其中一条环圈上寻找是否有另一个成环点。\n",
+    "    p = cycle1.next\n",
+    "    while p is not cycle1:\n",
+    "        if p is cycle2:\n",
+    "            return p\n",
+    "        p = p.next\n",
+    "    # 找不到, 说明不相交\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 测试"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( 2.14s)判断链表相交 ✔️\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_time, max_size, max_value, succeed = 10_000, 500, 200, True\n",
+    "\n",
+    "st = t()\n",
+    "for _ in range(test_time):\n",
+    "    h1, h2, intersect = generate_intersect_linked_list(max_size, max_value)\n",
+    "    test_intersect = get_intersect_linked_list(h1, h2)\n",
+    "    if intersect is not test_intersect:\n",
+    "        print(intersect, test_intersect, is_cycle_linked_list2(h1), is_cycle_linked_list2(h2))\n",
+    "        succeed = False\n",
+    "        break\n",
+    "print(f'({t()-st:5.2f}s)判断链表相交', '✔️' if succeed else '❌')"
    ]
   }
  ],
